feat: configuracao testes unitarios junit mokito